# warlock

./: .gitignore  Makefile  README.md  pyproject.toml  warlock-mode.el
examples/: define.war  hello_world.war
tests/: test_offside.py
warlock/: offside.py  parser.py
