[tool.poetry]
name = "warlock"
version = "0.1.0"
description = ""
authors = ["Laurence Pakenham-Smith <laurence@sourceless.org>"]

[tool.poetry.dependencies]
python = "^3.9"
parsimonious = "^0.8.1"
pytest = "^6.2.2"
pytest-bdd = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
